cosmos/steamaudio-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub const STEAMAUDIO_VERSION_MAJOR: u32 = 4;
pub const STEAMAUDIO_VERSION_MINOR: u32 = 8;
pub const STEAMAUDIO_VERSION_PATCH: u32 = 1;
pub const IPL_NUM_BANDS: u32 = 3;
#[doc = " \\defgroup types Data Types\nCommon data types used throughout the Steam Audio API.\n\\{"]
pub type IPLint8 = ::std::os::raw::c_char;
pub type IPLuint8 = ::std::os::raw::c_uchar;
pub type IPLint16 = ::std::os::raw::c_short;
pub type IPLuint16 = ::std::os::raw::c_ushort;
pub type IPLint32 = ::std::os::raw::c_int;
pub type IPLuint32 = ::std::os::raw::c_uint;
pub type IPLint64 = ::std::os::raw::c_longlong;
pub type IPLuint64 = ::std::os::raw::c_ulonglong;
pub type IPLfloat32 = f32;
pub type IPLfloat64 = f64;
pub type IPLbyte = ::std::os::raw::c_uchar;
pub type IPLsize = usize;
pub type IPLstring = *const ::std::os::raw::c_char;
#[doc = "< The Boolean value \\c false."]
pub const IPLbool_IPL_FALSE: IPLbool = 0;
#[doc = "< The Boolean value \\c true."]
pub const IPLbool_IPL_TRUE: IPLbool = 1;
#[doc = " Boolean values."]
pub type IPLbool = ::std::os::raw::c_int;
#[doc = "< The operation completed successfully."]
pub const IPLerror_IPL_STATUS_SUCCESS: IPLerror = 0;
#[doc = "< An unspecified error occurred."]
pub const IPLerror_IPL_STATUS_FAILURE: IPLerror = 1;
#[doc = "< The system ran out of memory."]
pub const IPLerror_IPL_STATUS_OUTOFMEMORY: IPLerror = 2;
#[doc = "< An error occurred while initializing an external dependency."]
pub const IPLerror_IPL_STATUS_INITIALIZATION: IPLerror = 3;
#[doc = " Status codes returned by Steam Audio API functions."]
pub type IPLerror = ::std::os::raw::c_int;
#[doc = " Callback for updating the application on the progress of a function.\n\nYou can use this to provide the user with visual feedback, like a progress bar.\n\n\\param  progress    Fraction of the function work that has been completed, between 0.0 and 1.0.\n\\param  userData    Pointer to arbitrary user-specified data provided when calling the function that will\ncall this callback."]
pub type IPLProgressCallback = ::std::option::Option<
    unsafe extern "C" fn(progress: IPLfloat32, userData: *mut ::std::os::raw::c_void),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLContext_t {
    _unused: [u8; 0],
}
#[doc = " A context object, which controls low-level operations of Steam Audio. Typically, a context is specified once\nduring the execution of the client program, before calling any other API functions."]
pub type IPLContext = *mut _IPLContext_t;
#[doc = "< A normal, informational message."]
pub const IPLLogLevel_IPL_LOGLEVEL_INFO: IPLLogLevel = 0;
#[doc = "< A warning. The operation that generated this message may not work as expected."]
pub const IPLLogLevel_IPL_LOGLEVEL_WARNING: IPLLogLevel = 1;
#[doc = "< An error. The operation that generated this message failed."]
pub const IPLLogLevel_IPL_LOGLEVEL_ERROR: IPLLogLevel = 2;
#[doc = "< A detailed message intended for debugging purposes only."]
pub const IPLLogLevel_IPL_LOGLEVEL_DEBUG: IPLLogLevel = 3;
#[doc = " Severity levels of log messages generated by Steam Audio."]
pub type IPLLogLevel = ::std::os::raw::c_int;
#[doc = "< Intel Streaming SIMD Extensions 2. Up to 4 simultaneous floating-point operations."]
pub const IPLSIMDLevel_IPL_SIMDLEVEL_SSE2: IPLSIMDLevel = 0;
#[doc = "< Intel Streaming SIMD Extensions 4.2 or older. Up to 4 simultaneous floating-point operations."]
pub const IPLSIMDLevel_IPL_SIMDLEVEL_SSE4: IPLSIMDLevel = 1;
#[doc = "< Intel Advanced Vector Extensions or older. Up to 8 simultaneous floating-point operations."]
pub const IPLSIMDLevel_IPL_SIMDLEVEL_AVX: IPLSIMDLevel = 2;
#[doc = "< Intel Advanced Vector Extensions 2 or older. Up to 8 simultaneous floating-point operations."]
pub const IPLSIMDLevel_IPL_SIMDLEVEL_AVX2: IPLSIMDLevel = 3;
#[doc = "< Intel Advanced Vector Extensions 512 or older. Up to 16 simultaneous floating-point operations."]
pub const IPLSIMDLevel_IPL_SIMDLEVEL_AVX512: IPLSIMDLevel = 4;
#[doc = "< ARM NEON. Up to 4 simultaneous floating-point operations."]
pub const IPLSIMDLevel_IPL_SIMDLEVEL_NEON: IPLSIMDLevel = 0;
#[doc = " SIMD instruction sets that Steam Audio can attempt to use."]
pub type IPLSIMDLevel = ::std::os::raw::c_int;
#[doc = "< All API functions perform extra validation checks. NOTE: This imposes a significant performance penalty."]
pub const IPLContextFlags_IPL_CONTEXTFLAGS_VALIDATION: IPLContextFlags = 1;
#[doc = "< Force this enum to be 32 bits in size."]
pub const IPLContextFlags_IPL_CONTEXTFLAGS_FORCE_32BIT: IPLContextFlags = 2147483647;
#[doc = " Additional flags for modifying the behavior of a Steam Audio context."]
pub type IPLContextFlags = ::std::os::raw::c_int;
#[doc = " Prototype of a callback that logs a message generated by Steam Audio. This may be implemented in any suitable way,\nsuch as appending to a log file, displaying a dialog box, etc. The default behavior is to print to \\c stdout.\n\n\\param  level       The severity level of the message.\n\\param  message     The message to log."]
pub type IPLLogFunction = ::std::option::Option<
    unsafe extern "C" fn(level: IPLLogLevel, message: *const ::std::os::raw::c_char),
>;
#[doc = " Prototype of a callback that allocates memory. This is usually specified to let Steam Audio use a custom memory\nallocator. The default behavior is to use the OS-dependent aligned version of \\c malloc.\n\n\\param  size        The number of bytes to allocate.\n\\param  alignment   The alignment (in bytes) of the start address of the allocated memory.\n\n\\return Pointer to the allocated block of memory, or \\c NULL if allocation failed."]
pub type IPLAllocateFunction = ::std::option::Option<
    unsafe extern "C" fn(size: IPLsize, alignment: IPLsize) -> *mut ::std::os::raw::c_void,
>;
#[doc = " Prototype of a callback that frees a block of memory. This is usually specified when using a custom memory\nallocator with Steam Audio. The default behavior is to use the OS-dependent aligned version of \\c free.\n\n\\param  memoryBlock Pointer to the block of memory."]
pub type IPLFreeFunction =
    ::std::option::Option<unsafe extern "C" fn(memoryBlock: *mut ::std::os::raw::c_void)>;
#[doc = " Settings used to create a context object."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLContextSettings {
    #[doc = " The API version used by the caller. Context creation will fail if `phonon.dll` does not implement a\ncompatible version of the API. Typically, this should be set to `STEAMAUDIO_VERSION`."]
    pub version: IPLuint32,
    #[doc = " (Optional) If non-NULL, Steam Audio will call this function to record log messages generated by\ncertain operations."]
    pub logCallback: IPLLogFunction,
    #[doc = " (Optional) If non-NULL, Steam Audio will call this function whenever it needs to allocate\nmemory."]
    pub allocateCallback: IPLAllocateFunction,
    #[doc = " (Optional) If non-NULL, Steam Audio will call this function whenever it needs to free memory."]
    pub freeCallback: IPLFreeFunction,
    #[doc = " The maximum SIMD instruction set level that Steam Audio should use. Steam Audio automatically\nchooses the best instruction set to use based on the user's CPU, but you can prevent it from\nusing certain newer instruction sets using this parameter. For example, with some workloads,\nAVX512 instructions consume enough power that the CPU clock speed will be throttled, resulting\nin lower performance than expected. If you observe this in your application, set this\nparameter to `IPL_SIMDLEVEL_AVX2` or lower."]
    pub simdLevel: IPLSIMDLevel,
    #[doc = " Additional flags for modifying the behavior of the created context."]
    pub flags: IPLContextFlags,
}
extern "C" {
    #[doc = " Creates a context object. A context must be created before creating any other API objects.\n\n\\param  settings    Pointer to the `IPLContextSettings` struct that specifies context creation parameters.\n\\param  context     [out] Handle to the created context object.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplContextCreate(
        settings: *mut IPLContextSettings,
        context: *mut IPLContext,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a context. The context will not be destroyed until all references are\nreleased.\n\n\\param  context     The context to retain a reference to.\n\n\\return The additional reference to the context."]
    pub fn iplContextRetain(context: IPLContext) -> IPLContext;
}
extern "C" {
    #[doc = " Releases a reference to a context. The context will not be destroyed until all references are released.\n\n\\param  context     [in, out] The context to release."]
    pub fn iplContextRelease(context: *mut IPLContext);
}
#[doc = " A point or vector in 3D space. Steam Audio uses a right-handed coordinate system, with the positive x-axis pointing\nright, the positive y-axis pointing up, and the negative z-axis pointing ahead. Position and direction data\nobtained from a game engine or audio engine must be properly transformed before being passed to any Steam Audio API\nfunction."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLVector3 {
    #[doc = " The x-coordinate."]
    pub x: IPLfloat32,
    #[doc = " The y-coordinate."]
    pub y: IPLfloat32,
    #[doc = " The z-coordinate."]
    pub z: IPLfloat32,
}
#[doc = " A 4x4 matrix used to represent an affine transform."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLMatrix4x4 {
    #[doc = " Matrix elements, in row-major order."]
    pub elements: [[IPLfloat32; 4usize]; 4usize],
}
#[doc = " An axis-aligned box. Axis-aligned boxes are used to specify a volume of 3D space."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLBox {
    #[doc = " The minimum coordinates of any vertex."]
    pub minCoordinates: IPLVector3,
    #[doc = " The maximum coordinates of any vertex."]
    pub maxCoordinates: IPLVector3,
}
#[doc = " A sphere. Spheres are used to define a region of influence around a point."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLSphere {
    #[doc = " The center."]
    pub center: IPLVector3,
    #[doc = " The radius."]
    pub radius: IPLfloat32,
}
#[doc = " A 3D coordinate system, expressed relative to a canonical coordinate system."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLCoordinateSpace3 {
    #[doc = " Unit vector pointing to the right (local +x axis)."]
    pub right: IPLVector3,
    #[doc = " Unit vector pointing upwards (local +y axis)."]
    pub up: IPLVector3,
    #[doc = " Unit vector pointing forwards (local -z axis)."]
    pub ahead: IPLVector3,
    #[doc = " The origin, relative to the canonical coordinate system."]
    pub origin: IPLVector3,
}
extern "C" {
    #[doc = " Calculates the relative direction from the listener to a sound source. The returned direction\nvector is expressed in the listener's coordinate system.\n\n\\param  context             The context used to initialize Steam Audio.\n\\param  sourcePosition      World-space coordinates of the source.\n\\param  listenerPosition    World-space coordinates of the listener.\n\\param  listenerAhead       World-space unit-length vector pointing ahead relative to the listener.\n\\param  listenerUp          World-space unit-length vector pointing up relative to the listener.\n\n\\return A unit-length vector in the listener's coordinate space, pointing from the listener to the source."]
    pub fn iplCalculateRelativeDirection(
        context: IPLContext,
        sourcePosition: IPLVector3,
        listenerPosition: IPLVector3,
        listenerAhead: IPLVector3,
        listenerUp: IPLVector3,
    ) -> IPLVector3;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLSerializedObject_t {
    _unused: [u8; 0],
}
